[gd_scene load_steps=33 format=2]

[ext_resource path="res://fonts/consola.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/trial.gd" type="Script" id=2]
[ext_resource path="res://sprites/evidence/autopsy_big.png" type="Texture" id=3]
[ext_resource path="res://sprites/evidence/autopsy.png" type="Texture" id=4]
[ext_resource path="res://sprites/evidence/footage_big.png" type="Texture" id=5]
[ext_resource path="res://sprites/court_record.png" type="Texture" id=6]
[ext_resource path="res://sprites/evidence/badge.png" type="Texture" id=7]
[ext_resource path="res://sprites/evidence/badge_big.png" type="Texture" id=8]
[ext_resource path="res://sprites/evidence/body.png" type="Texture" id=9]
[ext_resource path="res://sprites/evidence/footage.png" type="Texture" id=10]
[ext_resource path="res://sprites/evidence/body_big.png" type="Texture" id=11]
[ext_resource path="res://sprites/evidence/branch.png" type="Texture" id=12]
[ext_resource path="res://sprites/evidence/branch_big.png" type="Texture" id=13]
[ext_resource path="res://sprites/evidence/knucklebuster_big.png" type="Texture" id=14]
[ext_resource path="res://sprites/evidence/knucklebuster.png" type="Texture" id=15]
[ext_resource path="res://sprites/witness_testimony/testimony_1.png" type="Texture" id=16]
[ext_resource path="res://sprites/witness_testimony/testimony_5.png" type="Texture" id=17]
[ext_resource path="res://sprites/witness_testimony/testimony_2.png" type="Texture" id=18]
[ext_resource path="res://sprites/witness_testimony/testimony_3.png" type="Texture" id=19]
[ext_resource path="res://sprites/witness_testimony/testimony_4.png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=1]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 3

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 3

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "body",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "autopsy",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "branch",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "knucklebuster",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "footage",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "footage 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "badge",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 3

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "body",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "autopsy",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "branch",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "knucklebuster",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "footage",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "badge",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 16 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 486.003
margin_right = 863.0
margin_bottom = 598.003
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_button" type="Button" parent="."]
margin_left = 863.0
margin_top = 486.0
margin_right = 1024.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 1 )
text = "Дальше"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="."]
margin_left = 863.0
margin_top = 434.0
margin_right = 1024.0
margin_bottom = 484.0
custom_fonts/font = SubResource( 1 )
text = "Назад"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="court_record" type="Button" parent="."]
margin_left = 747.0
margin_right = 1024.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Записи суда"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="show_text" type="Label" parent="."]
margin_left = 10.0
margin_top = 496.0
margin_right = 853.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_color" type="ColorRect" parent="show_text"]
material = SubResource( 3 )
margin_right = 843.0
margin_bottom = 94.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice_first" type="Button" parent="."]
visible = false
margin_left = 10.0
margin_top = 405.88
margin_right = 334.0
margin_bottom = 479.88
custom_fonts/font = SubResource( 4 )
disabled = true
text = "Выбор 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice_second" type="Button" parent="."]
visible = false
margin_left = 10.0
margin_top = 310.471
margin_right = 334.0
margin_bottom = 384.471
custom_fonts/font = SubResource( 4 )
disabled = true
text = "Выбор 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="frame_record" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 65, 70 )
scale = Vector2( 1.31, 1.31 )
frames = SubResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="record_theme" type="ColorRect" parent="frame_record"]
material = SubResource( 6 )
margin_right = 600.0
margin_bottom = 300.0
color = Color( 0.596078, 0.811765, 1, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="evidence_1" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 45.8434, 43.3727 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_1"]
material = SubResource( 8 )
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_2" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 119.125, 43.3727 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_2"]
material = SubResource( 8 )
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_3" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 190.881, 43.3727 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_3"]
material = SubResource( 8 )
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_4" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 262.637, 43.3727 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_4"]
material = SubResource( 8 )
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_5" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 45.8435, 114.365 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_5"]
material = SubResource( 8 )
margin_left = -32.0313
margin_top = -32.0313
margin_right = 31.9687
margin_bottom = 31.9687
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_6" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 118.362, 114.365 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_6"]
material = SubResource( 8 )
margin_left = -32.0313
margin_top = -32.0313
margin_right = 31.9688
margin_bottom = 31.9687
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_7" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 190.118, 114.365 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_7"]
material = SubResource( 8 )
margin_left = -32.0313
margin_top = -32.0313
margin_right = 31.9688
margin_bottom = 31.9687
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_8" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 261.874, 114.365 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_8"]
material = SubResource( 8 )
margin_left = -32.0313
margin_top = -32.0313
margin_right = 31.9688
margin_bottom = 31.9687
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_9" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 45.8435, 184.594 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_9"]
material = SubResource( 8 )
margin_left = -32.0313
margin_top = -32.0313
margin_right = 31.9687
margin_bottom = 31.9687
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_10" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 117.599, 185.358 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_10"]
material = SubResource( 8 )
margin_left = -32.0313
margin_top = -32.0313
margin_right = 31.9687
margin_bottom = 31.9687
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_11" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 190.118, 185.358 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_11"]
material = SubResource( 8 )
margin_left = -32.0313
margin_top = -32.0313
margin_right = 31.9688
margin_bottom = 31.9687
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence_12" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 261.874, 185.358 )
scale = Vector2( 0.762614, 0.762614 )
frames = SubResource( 7 )
animation = "footage 1"

[node name="hb" type="ColorRect" parent="frame_record/evidence_12"]
material = SubResource( 8 )
margin_left = -32.0313
margin_top = -32.0313
margin_right = 31.9688
margin_bottom = 31.9687
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewport" type="AnimatedSprite" parent="frame_record"]
position = Vector2( 440.131, 79.4598 )
scale = Vector2( 0.761002, 0.761002 )
frames = SubResource( 9 )
animation = "footage"

[node name="Label" type="Label" parent="frame_record"]
margin_left = 306.0
margin_top = 157.0
margin_right = 576.0
margin_bottom = 283.0
custom_fonts/font = SubResource( 10 )
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record_show" type="Button" parent="frame_record"]
margin_left = 14.0
margin_top = 225.0
margin_right = 150.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 11 )
text = "Показать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -17.479

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
volume_db = -18.175

[node name="update" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="stopreact" type="Timer" parent="."]

[node name="intro_whoosh" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 513.621, 245.5 )
scale = Vector2( 0.636724, 0.636724 )
frames = SubResource( 12 )
[connection signal="pressed" from="next_button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="court_record" to="." method="_on_court_record_pressed"]
[connection signal="pressed" from="choice_first" to="." method="_on_choice_first_pressed"]
[connection signal="pressed" from="choice_second" to="." method="_on_choice_second_pressed"]
[connection signal="pressed" from="frame_record/record_show" to="." method="_on_record_show_pressed"]
[connection signal="timeout" from="update" to="." method="_on_update_timeout"]
[connection signal="animation_finished" from="intro_whoosh" to="." method="_on_intro_whoosh_animation_finished"]
